--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ eventlet==0.26.1
 Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-SocketIO==4.3.1
+gunicorn==20.0.4
 logzero==1.5.0
 pre-commit==2.6.0
 pylint==2.5.3
